--- a/index.html
+++ b/index.html
@@ -20,24 +20,12 @@
     <h1 id="top">Hallo</h1>
     <details>
       <summary>Navigation</summary>
-      <nav>
-        <ul class="navbar">
-          <li class="nav-item">
-            <a href="#git" class="nav-link">GIT</a>
-          </li>
-          <li class="nav-item">
-            <a href="#html" class="nav-link">HTML</a>
-          </li>
-          <li class="nav-item">
-            <a href="#shell" class="nav-link">SHELL</a>
-          </li>
-          <li class="nav-item">
-            <a href="seite2.html" class="nav-link">Seite 2</a>
-          </li>
-          <li class="nav-item">
-            <a href="page3.html" class="nav-link">Seite 3</a>
-          </li>
-        </ul>
+      <nav class="nav">
+        <a href="#git" class="nav-link">GIT</a>
+        <a href="#html" class="nav-link">HTML</a>
+        <a href="#shell" class="nav-link">SHELL</a>
+        <a href="seite2.html" class="nav-link">Seite 2</a>
+        <a href="page3.html" class="nav-link">Seite 3</a>
       </nav>
     </details>
     <details>
