--- a/seite2.html
+++ b/seite2.html
@@ -20,15 +20,9 @@
     <h1>Seite 2</h1>
     <details>
       <summary>Navigation</summary>
-      <nav>
-        <ul class="navbar">
-          <li class="nav-item">
-            <a href="index.html" class="nav-link">Startseite</a>
-          </li>
-          <li class="nav-item">
-            <a href="page3.html" class="nav-link">Seite 3</a>
-          </li>
-        </ul>
+      <nav class="nav">
+        <a href="index.html" class="nav-link">Startseite</a>
+        <a href="page3.html" class="nav-link">Seite 3</a>
       </nav>
     </details>
     <div class="center">
